# note_organizer

./: .env  README.md  package-lock.json
front-end/: package-lock.json  package.json
front-end/src/: .env  App.css  App.js  data.md
front-end/src/service/: ApiService.js
note/: .gitignore  Cargo.toml  diesel.toml
note/src/: db.rs  main.rs  note.rs  schema.rs
