[package]
name = "note"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
db = "0.1.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", ] }
dotenvy = "0.15"
serde = { version = "1.0.210", features = ["derive" ] }
serde_json = "1.0.128"


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
